--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -1,5 +1,5 @@
-/* CSS RESET - do not remove */
-/* Reset default browser styles and provide a consistent starting point */
+
+
 html {
   box-sizing: border-box;
   font-size: 16px;
@@ -21,4 +21,77 @@ body {
 }
 
 /* STYLES */
-/* Write your CSS below */
+.header {
+  background-image: url("/images/apple-pie.jpg");
+  background-position: center;
+  background-size: cover;
+  color: white;;
+  height: 500px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  text-align: center;
+  
+}
+
+.mission-statement {
+  text-align: center;
+  border-bottom: 2px solid grey;
+}
+
+#content{
+  padding-top: 50px;
+}
+
+.cooking-info {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 25%;
+  height: auto;
+
+}
+#ingredients {
+  font-family: "Helvetica", sans-serif;
+ padding-top: 50px;
+ border-bottom: 2px solid grey;
+ line-height: 1.35em;
+}
+
+.instructions {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 25%;
+  height: auto;
+}
+#directions{
+  font-family: "Helvetica", sans-serif;
+
+}
+
+ul {
+  margin: 0;
+  padding: 40px;
+  list-style: "-";
+}
+
+ol {
+  margin: auto;
+  padding: 40px;
+  counter-reset: list;
+  line-height: 1.5em
+
+}
+
+ol >li {
+  list-style: none;
+}
+
+ol > li:before {
+ counter-increment: list;
+  content: counter(list) ") ";
+}
+
