--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -1,15 +1,24 @@
-
-
 html {
   box-sizing: border-box;
   font-size: 16px;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
-body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
   margin: 0;
   padding: 0;
   font-weight: lighter;
@@ -25,7 +34,7 @@ body {
   background-image: url("/images/apple-pie.jpg");
   background-position: center;
   background-size: cover;
-  color: white;;
+  color: white;
   height: 500px;
   width: 100%;
   display: flex;
@@ -33,7 +42,6 @@ body {
   align-items: center;
   font-size: 30px;
   text-align: center;
-  
 }
 
 .mission-statement {
@@ -41,7 +49,7 @@ body {
   border-bottom: 2px solid grey;
 }
 
-#content{
+#content {
   padding-top: 50px;
 }
 
@@ -51,13 +59,12 @@ body {
   margin-right: auto;
   max-width: 25%;
   height: auto;
-
 }
 #ingredients {
   font-family: "Helvetica", sans-serif;
- padding-top: 50px;
- border-bottom: 2px solid grey;
- line-height: 1.35em;
+  padding-top: 50px;
+  border-bottom: 2px solid grey;
+  line-height: 1.35em;
 }
 
 .instructions {
@@ -67,9 +74,8 @@ body {
   max-width: 25%;
   height: auto;
 }
-#directions{
+#directions {
   font-family: "Helvetica", sans-serif;
-
 }
 
 ul {
@@ -82,16 +88,14 @@ ol {
   margin: auto;
   padding: 40px;
   counter-reset: list;
-  line-height: 1.5em
-
+  line-height: 1.5em;
 }
 
-ol >li {
+ol > li {
   list-style: none;
 }
 
 ol > li:before {
- counter-increment: list;
+  counter-increment: list;
   content: counter(list) ") ";
 }
-
